<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="329dp"
        android:layout_marginTop="90dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/cardetails"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/vehiclenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/vehiclenumber"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/vehicletext"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:text="@string/vehicletype"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/vehicletypespinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_gravity="right"
                android:layout_toEndOf="@+id/vehicletext"
                android:layout_toRightOf="@+id/vehicletext"
                android:gravity="center_vertical"
                android:textAlignment="center" />

        </LinearLayout>

        <EditText
            android:id="@+id/vehiclecolor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/vehiclecolor" />

        <EditText
            android:id="@+id/vehiclename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/vehiclename" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/previous"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:background="@drawable/button_shape"
                android:text="@string/previous"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/confirmandpay"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@drawable/button_shape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#FFFFFF"
                android:text="@string/confirmandpay"
                android:textSize="20sp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
