<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/Background"
    android:layout_height="match_parent"
    tools:context="com.example.dell.orps.PaymentActivity">

    <TextView
        android:id="@+id/paymentoptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/paymentoptions"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/paytm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layout_margin="8dp"
        android:background="@color/colorAccent"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/paytm"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/railway_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:elevation="4dp"
        android:layout_margin="8dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/railwaywallet"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:elevation="4dp"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/card"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/anyother"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="0.2"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/othermodes"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>
