<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="329dp"
        android:layout_marginTop="90dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/cardetails"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/vehiclenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/vehiclenumber"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/vehicletext"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/vehicletype"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/vehicletypespinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_gravity="right"
                android:gravity="center_vertical"
                android:layout_toEndOf="@+id/vehicletext"
                android:layout_toRightOf="@+id/vehicletext"
                android:textAlignment="center" />

        </LinearLayout>

        <EditText
            android:id="@+id/vehiclecolor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/vehiclecolor"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/vehiclename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/vehiclename"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorAccent" />

        <Button
            android:id="@+id/confirmandpay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="#00000000"
            android:text="@string/confirmandpay"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>