<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/Background"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dell.orps.SignInActivity"
    android:weightSum="1">


    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="74dp"
        android:layout_weight="0.2"
        android:text="@string/enteryourdetails"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:layout_weight="0.1"
        android:inputType="textPersonName"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_weight="0.1"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Email Id"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_weight="0.1"
        android:ems="10"
        android:maxLength="10"
        android:layout_marginBottom="32dp"
        android:hint="@string/contact"
        android:inputType="phone" />

    <Button
        android:id="@+id/signup"
        android:layout_width="220dp"
        android:layout_weight="0.1"
        android:background="#00000000"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signup" />


</LinearLayout>
</ScrollView>