<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.dell.orps.ParkingDetails"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    android:background="@color/Background"
    android:layout_height="match_parent"
    tools:context="com.example.dell.orps.ParkingDetails">
<TextView
    android:id="@+id/stationDetails"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:layout_weight="1"
    android:visibility="invisible"
    android:text="@string/stationdetail"
    android:textColor="#000000"
    android:textSize="20sp"
    android:textStyle="bold"/>

    <ListView
        android:id="@+id/stationdetails"
        android:layout_width="wrap_content"
        android:layout_height="178dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:visibility="invisible" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="201dp"
        android:layout_height="27dp"
        android:indeterminate="true"
        android:layout_margin="8dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twowheelerparkingdetails"
            android:textColor="#000000"
            android:visibility="invisible"
            android:textSize="20sp"
            android:id="@+id/twoWheeler"
            android:layout_margin="16dp"
            android:layout_weight="0.5"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/fourWheeler"
            android:layout_height="wrap_content"
            android:text="@string/fourwheelerparkingdetails"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:visibility="invisible"
            android:layout_margin="16dp"
            android:textColor="#000000"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <ListView
            android:id="@+id/Two_Wheeler"
            android:layout_weight="0.5"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="138dp" />

        <ListView
            android:id="@+id/Four_Wheeler"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:visibility="invisible"
            android:layout_height="138dp" />

    </LinearLayout>

    <Button
        android:id="@+id/book"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:visibility="invisible"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:background="@drawable/button_shape"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/Book"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>
</RelativeLayout>