<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context="com.example.dell.orps.MainActivity">



    <TextView
        android:id="@+id/welcome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="8dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/welcome1"
        android:layout_alignBottom="@+id/welcome1"
        android:layout_toRightOf="@+id/welcome1"
        android:layout_toEndOf="@+id/welcome1" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            android:id="@+id/relativeLayout"
            android:weightSum="1"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/welcome1"
            android:layout_alignStart="@+id/welcome1">

            <TextView
                android:id="@+id/enterstation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:text="@string/enterstation"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>
        <Button
            android:id="@+id/findparking"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:textSize="20sp"
            android:elevation="4dp"
            android:background="@drawable/button_shape"
            android:text="@string/findparking"
            android:shadowColor="#A8A8A8"
            android:textColor="#FFFFFF"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:layout_marginTop="54dp"
            android:layout_below="@+id/stationspinner"
            android:layout_centerHorizontal="true" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/myFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:background="@color/colorAccent"
        android:src="@drawable/fab_add"
        app:elevation="4dp"
        app:fabSize="auto"
        android:layout_below="@+id/findparking"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="56dp">

    </android.support.design.widget.FloatingActionButton>

    <Button
        android:id="@+id/check"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:elevation="4dp"
        android:textSize="20sp"
        android:shadowColor="#A8A8A8"
        android:textColor="#FFFFFF"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:background="@drawable/button_shape"
        android:text="Current Booking"
        android:layout_alignTop="@+id/myFAB"
        android:layout_alignLeft="@+id/relativeLayout"
        android:layout_alignStart="@+id/relativeLayout"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/car"
        android:layout_below="@+id/welcome1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp" />

    <Spinner
        android:id="@+id/stationspinner"
        android:layout_width="180dp"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/relativeLayout"
        android:layout_gravity="right"
        android:textAlignment="center" />

</RelativeLayout>
